--- a/gitpeldaproject/gitpeldaproject.csproj
+++ b/gitpeldaproject/gitpeldaproject.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="eszterszoukup.cs" />
+    <Compile Include="esztersz.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
