--- a/gitpeldaproject/gitpeldaproject.csproj
+++ b/gitpeldaproject/gitpeldaproject.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="A_Te_Neved.cs" />
+    <Compile Include="KristofKovacs1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
