--- a/gitpeldaproject/gitpeldaproject.csproj
+++ b/gitpeldaproject/gitpeldaproject.csproj
@@ -40,9 +40,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="A_Te_Neved.cs" />
+    <Compile Include="dadi075.cs" />
+    <Compile Include="DekanySzabolcs.cs" />
+    <Compile Include="k-attis.cs" />
     <Compile Include="KristofKovacs1.cs" />
+    <Compile Include="markkoltai.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="streitsandor.cs" />
+    <Compile Include="vataligergo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
