--- a/gitpeldaproject/gitpeldaproject.csproj
+++ b/gitpeldaproject/gitpeldaproject.csproj
@@ -40,12 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="dragonar.cs" />
     <Compile Include="kovacsmark0517.cs" />
     <Compile Include="kovacsmate97.cs" />
     <Compile Include="markkoltai.cs" />
-    <Compile Include="streitsandor.cs" />
     <Compile Include="DekanySzabolcs.cs" />
-    <Compile Include="KristofKovacs1.cs" />
     <Compile Include="dadi075.cs" />
     <Compile Include="BartGergely.cs" />
     <Compile Include="aaronb96.cs" />
