--- a/gitpeldaproject/gitpeldaproject.csproj
+++ b/gitpeldaproject/gitpeldaproject.csproj
@@ -43,25 +43,21 @@
     <Compile Include="dragonar.cs" />
     <Compile Include="A_Te_Neved.cs" />
     <Compile Include="kovacsmark0517.cs" />
-    <Compile Include="dadi075.cs" />
     <Compile Include="esztersz.cs" />
     <Compile Include="kovacsmate97.cs" />
     <Compile Include="markkoltai.cs" />
     <Compile Include="DekanySzabolcs.cs" />
-    <Compile Include="streitsandor.cs" />
-    <Compile Include="KristofKovacs1.cs" />
     <Compile Include="dadi075.cs" />
     <Compile Include="BartGergely.cs" />
     <Compile Include="aaronb96.cs" />
-    <Compile Include="streitsandor.cs" />
     <Compile Include="GombasBence.cs" />
     <Compile Include="k-attis.cs" />
     <Compile Include="KristofKovacs1.cs" />
-    <Compile Include="markkoltai.cs" />
     <Compile Include="MartonLabancz.cs" />
     <Compile Include="AlexaTorok.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="rixi96.cs" />
     <Compile Include="streitsandor.cs" />
     <Compile Include="vataligergo.cs" />
     <Compile Include="tomi06910.cs" />
