--- a/gitpeldaproject/gitpeldaproject.csproj
+++ b/gitpeldaproject/gitpeldaproject.csproj
@@ -40,13 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="dragonar.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="streitsandor.cs" />
-    <Compile Include="vataligergo.cs" />
-    <Compile Include="tomi06910.cs" />
-    <Compile Include="susagabo.cs" />
-    <Compile Include="skyland0629.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
